FIXED: Thumbnail grid on Mobile Device
git-svn-id: https://plugins.svn.wordpress.org/easy-media-gallery@725133 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/css/frontend.css
+++ b/trunk/css/frontend.css
@@ -165,10 +165,8 @@ span.link_post:hover{
 .pfwrpr {width: 100%;}	
 	
 .view {
-   width:auto !important;
-   height:auto !important;
 	max-width: 200px !important;
-   display:block;
+	display:block;
     }
 
 .view img {
